--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
     <distributionManagement>
     <repository>
       <id>github</id>
-      <name>supplementary-exercise-4-ci-cd-pipelines-Wabona</name>
-      <url>https://maven.pkg.github.com/CS1632-Fall2024/supplementary-exercise-4-ci-cd-pipelines-wonsunahn</url>
+      <name>GitHub Apache Maven Packages</name>
+      <url>https://github.com/CS1632-Fall2024/supplementary-exercise-4-ci-cd-pipelines-Wabona</url>
     </repository>
   </distributionManagement>
 
