--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
     <repository>
       <id>github</id>
       <name>GitHub Apache Maven Packages</name>
-      <url>https://github.com/CS1632-Fall2024/supplementary-exercise-4-ci-cd-pipelines-Wabona</url>
+      <url>https://maven.pkg.github.com/CS1632-Fall2024/supplementary-exercise-4-ci-cd-pipelines-Wabona</url>
     </repository>
   </distributionManagement>
 
